# JniBench

./: .gitignore  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/kman/jnibench/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: array_access_benchmark.cpp  benchmark.cpp
app/src/main/java/org/kman/jnibench/: ArrayAccessBenchmark.java  Benchmark.java  MainActivity.kt
app/src/main/jni/: org_kman_jnibench_ArrayAccessBenchmark.h  org_kman_jnibench_Benchmark.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/kman/jnibench/: ExampleUnitTest.kt
